  . Fix pthreads detection when cross-compiling (ffontaine)
  . Fixed bug #73215 (uniqid() should use better random source). (Yasuo)
  . Fixed bug #73337 (try/catch not working with two exceptions inside a same
    operation). (Dmitry)
  . Implemented FR #72768 (Add ENABLE_VIRTUAL_TERMINAL_PROCESSING flag for
    php.exe). (Michele Locati)

- Date:
  . Fixed bug #69587 (DateInterval properties and isset). (jhdxr)

- EXIF:
  . Added support for vendor specific tags for the following formats:
    Samsung, DJI, Panasonic, Sony, Pentax, Minolta & Sigma/Foveon. (Kalle)
  . Fixed bug #72682 (exif_read_data() fails to read all data for some
    images). (Kalle)
  . Fixed bug #71534 (Type confusion in exif_read_data() leading to heap
    overflow in debug mode). (hlt99 at blinkenshell dot org, Kalle)
  . Fixed bug #68547 (Exif Header component value check error).
    (sjh21a at gmail dot com, Kalle)
  . Fixed bug #66443 (Corrupt EXIF header: maximum directory nesting level
    reached for some cameras). (Kalle)
  . Fixed Redhat bug #1362571 (PHP not returning full results for
    exif_read_data function). (Kalle)

- GD:
  . Implemented imageresolution as getter and setter (Christoph)

- GMP:
  . Fixed bug #70896 (gmp_fact() silently ignores non-integer input). (Sara)

- Mbstring:
  . Implemented request #66024 (mb_chr() and mb_ord()). (Masakielastic, Yasuo)
  . Implemented request #65081 (mb_scrub()). (Masakielastic, Yasuo)
  . Implemented request #69086 (enhancement for mb_convert_encoding() that
    handles multibyte replacement char nicely). (Masakielastic, Yasuo)
  . Added array input support to mb_convert_encoding(). (Yasuo)
  . Added array input support to mb_check_encoding(). (Yasuo)

- PDO_DBlib:
  . Fixed bug #73234 (Emulated statements let value dictate parameter type).
    (Adam Baratz)
  . Fixed bug #73396 (bigint columns are returned as strings).

- SOAP:
  . Fixed bug #69137 (Peer verification fails when using a proxy with SoapClient)
    (Keith Smiley)
