@@ -25,6 +25,12 @@ Array
 (
     [0] => ReflectionProperty Object
         (
+            [name] => 0
+            [class] => stdClass
+        )
+
+    [1] => ReflectionProperty Object
+        (
             [name] => oo
             [class] => stdClass
         )
