@@ -18,17 +18,17 @@ array(2) {
   int(1)
 }
 object(stdClass)#1 (2) {
-  [1]=>
+  ["1"]=>
   int(1)
-  [0]=>
+  ["0"]=>
   int(2)
 }
 object(ArrayObject)#2 (1) {
   ["storage":"ArrayObject":private]=>
   object(stdClass)#1 (2) {
-    [1]=>
+    ["1"]=>
     int(1)
-    [0]=>
+    ["0"]=>
     int(2)
   }
 }
