@@ -7,7 +7,7 @@ var_export($a);
 ?>
 --EXPECT--
 stdClass::__set_state(array(
-   0 => 1,
-   1 => 3,
+   '0' => 1,
+   '1' => 3,
    'foo' => 'bar',
 ))
